--- a/xml/src/main/res/navigation/nav.xml
+++ b/xml/src/main/res/navigation/nav.xml
@@ -4,7 +4,7 @@
 
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav"
-    app:startDestination="@id/newsListFragment">
+    app:startDestination="@id/splashFragment">
 
 
     <fragment
